add coffee dev dependency

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "mocha": "*",
     "should": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "coffee-script": "*"
   },
   "author": "Jeff Escalante",
   "main": "index.js",
