--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "autoprefixer-stylus",
   "description": "autoprefixer for stylus",
-  "version": "0.2.0-pre",
+  "version": "0.2.0",
   "license": "MIT",
   "repository": {
     "type": "git",
