add npm test command

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Jeff Escalante",
   "main": "index.js",
   "scripts": {
+    "test": "mocha test",
     "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage;"
   },
   "engines": {
