--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "url": "git://github.com/jenius/autoprefixer-stylus.git"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "*",
-    "stylus": "*",
-    "coffee-script": "*",
-    "css-parse": "*",
+    "chai": "1.x",
+    "coffee-script": "1.8.x",
     "coveralls": "2.x",
+    "css-parse": "2.x",
+    "istanbul": "0.3.x",
+    "mocha": "2.x",
     "mocha-lcov-reporter": "0.0.1",
-    "istanbul": "0.3.x"
+    "stylus": "*"
   },
   "author": "Jeff Escalante",
   "main": "index.js",
