--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "istanbul": "0.3.x",
     "mocha": "2.x",
     "mocha-lcov-reporter": "0.0.1",
-    "stylus": "*"
+    "stylus": "latest"
   },
   "author": "Jeff Escalante",
   "main": "index.js",
