Use Autoprefixer via PostCSS
Autoprefixer is currently displaying this warning:

> Autoprefixer's process() method is deprecated and will removed in next
> major release. Use postcss([autoprefixer]).process() instead

This commit fixes this by using the new method with PostCSS.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "autoprefixer-core": "5.x",
-    "multi-stage-sourcemap": "0.2.x"
+    "multi-stage-sourcemap": "0.2.x",
+    "postcss": "4.x"
   }
 }
