--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "node": ">=0.8.0"
   },
   "dependencies": {
-    "autoprefixer-core": "5.x",
+    "autoprefixer": "6.x",
     "multi-stage-sourcemap": "0.2.x",
-    "postcss": "4.x"
+    "postcss": "5.x"
   }
 }
