--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "coffee-script": "1.12.6",
+    "coffeescript": "1.12.6",
     "coveralls": "2.13.1",
     "css-parse": "2.0.0",
     "istanbul": "0.4.5",
@@ -28,8 +28,8 @@
     "node": ">= 4"
   },
   "dependencies": {
-    "autoprefixer": "7.1.0",
-    "multi-stage-sourcemap": "0.2.1",
-    "postcss": "6.0.1"
+    "autoprefixer": "8.6.4",
+    "multi-stage-sourcemap": "0.3.1",
+    "postcss": "6.0.23"
   }
 }
