--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "coffeescript": "1.12.6",
     "coveralls": "2.13.1",
     "css-parse": "2.0.0",
     "istanbul": "0.4.5",
     "mocha": "3.4.1",
     "mocha-lcov-reporter": "1.3.0",
+    "prettier": "^1.13.7",
     "stylus": "0.54.5"
   },
   "author": "Jeff Escalante",
