--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "url": "git://github.com/jescalan/autoprefixer-stylus.git"
   },
   "devDependencies": {
-    "chai": "3.5.0",
-    "coffee-script": "1.12.6",
-    "coveralls": "2.13.1",
+    "chai": "4.2.0",
+    "coffee-script": "1.12.7",
+    "coffeescript": "^2.4.1",
+    "coveralls": "3.0.3",
     "css-parse": "2.0.0",
     "istanbul": "0.4.5",
-    "mocha": "3.4.1",
+    "mocha": "6.1.4",
     "mocha-lcov-reporter": "1.3.0",
     "stylus": "0.54.5"
   },
@@ -28,8 +29,8 @@
     "node": ">= 4"
   },
   "dependencies": {
-    "autoprefixer": "7.1.0",
-    "multi-stage-sourcemap": "0.2.1",
-    "postcss": "6.0.1"
+    "autoprefixer": "9.5.1",
+    "multi-stage-sourcemap": "0.3.1",
+    "postcss": "7.0.16"
   }
 }
