--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
   },
   "devDependencies": {
     "chai": "4.2.0",
-    "coffee-script": "1.12.7",
     "coffeescript": "^2.4.1",
     "coveralls": "3.0.3",
     "css-parse": "2.0.0",
-    "istanbul": "0.4.5",
     "mocha": "6.1.4",
-    "mocha-lcov-reporter": "1.3.0",
+    "nyc": "^14.1.1",
+    "rimraf": "^2.6.3",
     "stylus": "0.54.5"
   },
   "author": "Jeff Escalante",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
-    "coverage": "istanbul cover _mocha --report html -- -R spec && open coverage/index.html"
+    "test": "nyc mocha",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls && rimraf ./coverage",
+    "coverage": "nyc report --reporter=html && open coverage/index.html"
   },
   "engines": {
     "node": ">= 4"
